<resources>
    <string name="app_name">ziyoda_learing_android</string>
    <string name="name">Name:</string>
    <string name="password">Password</string>
    <string name="kod">Kod:</string>
    <string name="email">Email</string>
    <string name="Email">Email:</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="Sign_up">Sign Up</string>
</resources>